@@ -7531,3 +7531,6 @@ EPRINTS-3.1.0-rc-2
  * Check for an XML "unresolved" response from CrossRef, fixing #3386
  * Added get_primary_key method to Database to fix #3396
 
+2008-07-12 cjg + af05v
+ * Spun "Box" off into it's own package with some funky options.
+
